# brawldogg-api

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/exceptions/: handlers.py
app/routers/: battlelog.py  club.py  player.py  rankings.py  static.py
app/services/: bs_service.py
